chore: fix sonarqube linting issues in tracker web TECH-1514 (#13661)
* chore: replace usage of collect(Collectors.toList()) with toList()

as in those situations we actually prefer an unomodifiable list versus a
modifiable one given by collect(Collectors.toList())

* chore: remove unreachable code

RelationshipCriteria.getIdentifierParam() throws a BadRequestException
if the identifier is blank

* chore: remove redundant tracker prefix

* chore: use instanceof pattern matching

* chore: use generic paramter like in java.util.Function

we might even extend java.util.Function

* chore: remove unecessary qualifier

* chore: reuse Set<RelationshipItem> mapper

* chore: use generic paramter like in java.util.Function

we might even extend java.util.Function